[tool.poetry]
name = "syrphid2d"
version = "0.1.0"
description = ""
authors = ["Will Dickson <will@iorodeo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
jax = {extras = ["cpu"], version = "^0.4.19"}
matplotlib = "^3.8.0"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
